# budget-mono

./: .gitignore  Cargo.toml  Makefile  README.md  cargo.toml
.github/workflows/: cargo-release.yml  npm-build.yml
auth-svc/: Cargo.toml
auth-svc/src/: main.rs  types.rs
bruno/: DELETE User.bru  collection.bru  create user -- 201 vps.bru  create user -- 201.bru  create user -- email improperly formatted.bru  delete line item.bru  find budget vps.bru  find budget.bru  get code vpc.bru  get code.bru  get token.bru  health.bru  hit-it.bru  verify code vpc.bru  verify code.bru  verify token vpc.bru  verify token.bru
budget-lib/: Cargo.toml
budget-lib/dbs/: USER_DDL.sql
budget-lib/src/: lib.rs
budget-lib/src/dao/: mod.rs  sqlite_dao.rs
budget-lib/src/types/: mod.rs
budget-rest/: Cargo.toml  Makefile
budget-rest/dbs/: USER_DDL.sql
budget-rest/src/: main.rs
budget-rest/src/dao/: mod.rs  sqlite_dao.rs
budget-rest/src/types/dao/: mod.rs
budget-web-app/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.js
budget-web-app/src/: App.vue  hash.js  store.js  style.css
budget-web-app/src/components/: Budget.vue  Landing.vue  Login.vue  Resources.vue
