[package]
name = "auth-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
chrono.workspace = true
mail-send = { workspace = true, features = ["ring"] }
rand.workspace= true
rustls.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha256.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
